--- a/packages/bootstrap/scss/spreadsheet/_variables.scss
+++ b/packages/bootstrap/scss/spreadsheet/_variables.scss
@@ -36,3 +36,5 @@ $kendo-spreadsheet-drawing-outline-style: solid !default;
 $kendo-spreadsheet-drawing-outline-width: 2px !default;
 
 $kendo-spreadsheet-drawing-anchor-bg: rgba( $kendo-selected-bg, .25 ) !default;
+
+$kendo-spreadsheet-dropzone-spacing-y: k-map-get( $kendo-spacing, 4 ) !default;
