--- a/packages/fluent/scss/spreadsheet/_layout.scss
+++ b/packages/fluent/scss/spreadsheet/_layout.scss
@@ -121,9 +121,6 @@
     }
     .k-spreadsheet-name-editor {
         width: 10em;
-        border-width: 0 1px 0 0;
-        border-style: solid;
-        border-color: inherit;
     }
     .k-spreadsheet-formula-bar {
         border-color: inherit;
@@ -131,6 +128,7 @@
         flex-direction: row;
         align-items: center;
         flex: 1;
+        gap: var( --kendo-padding-y, #{$kendo-padding-md-y} );
 
         > .k-icon,
         > .k-svg-icon {
@@ -680,14 +678,11 @@
         .k-reset-color { border-block-end-width: 1px; }
         .k-custom-color { border-block-start-width: 1px; }
         .k-spreadsheet-border-type-palette {
-            width: 12.5rem;
-            height: 5rem;
-            display: flex;
-            flex-flow: row wrap;
-            align-content: space-around;
-            justify-content: space-around;
+            padding: map.get( $kendo-spacing, 2 );
+            display: grid;
+            grid-template-columns: repeat(5, max-content);
+            gap: map.get( $kendo-spacing, 2 );
         }
-
     }
 
     .k-spreadsheet-format-popup {
@@ -712,7 +707,10 @@
         overflow: hidden;
     }
 
-    .k-spreadsheet-window {}
+    .k-spreadsheet-window .k-external-dropzone {
+        margin-block-end: $kendo-spreadsheet-dropzone-spacing-y;
+    }
+
     .k-spreadsheet-window .k-edit-form-container {
         width: auto;
         min-width: 0;
