fix(scheduler): prevent overwriting ongoing event border

--- a/packages/default/scss/scheduler/_theme.scss
+++ b/packages/default/scss/scheduler/_theme.scss
@@ -125,12 +125,14 @@
             );
             @include box-shadow( $kendo-scheduler-event-selected-shadow );
         }
-    }
-    .k-event-inverse {
-        color: k-contrast-legacy( $kendo-scheduler-event-text );
-    }
-    .k-event-ongoing {
-        @include box-shadow( $kendo-scheduler-event-ongoing-shadow );
+
+        &.k-event-inverse {
+            color: k-contrast-legacy( $kendo-scheduler-event-text );
+        }
+
+        &.k-event-ongoing {
+            @include box-shadow( $kendo-scheduler-event-ongoing-shadow );
+        }
     }
 
 
