feat(chip): adjust actions target size

--- a/packages/default/scss/chip/_layout.scss
+++ b/packages/default/scss/chip/_layout.scss
@@ -137,6 +137,10 @@
             padding-inline: $_padding-x;
             font-size: $_font-size;
             line-height: $_line-height;
+
+            .k-chip-action {
+                padding: $_padding-y;
+            }
         }
 
         .k-chip-avatar {
