--- a/packages/default/scss/splitter/_layout.scss
+++ b/packages/default/scss/splitter/_layout.scss
@@ -56,6 +56,7 @@
         .k-collapse-prev,
         .k-collapse-next {
             cursor: pointer;
+            padding: $kendo-splitter-collapse-icon-padding-y $kendo-splitter-collapse-icon-padding-x;
         }
 
     }
