--- a/packages/fluent/scss/splitter/_variables.scss
+++ b/packages/fluent/scss/splitter/_variables.scss
@@ -37,6 +37,13 @@ $kendo-splitter-drag-handle-thickness: map.get( $kendo-spacing, 0.5 ) !default;
 /// @group splitter
 $kendo-splitter-drag-icon-margin: map.get( $kendo-spacing, 2 ) !default;
 
+/// Horizontal padding of the collapse icon in the splitter.
+/// @group splitter
+$kendo-splitter-collapse-icon-padding-x: null !default;
+/// Vertical padding of the collapse icon in the splitter.
+/// @group splitter
+$kendo-splitter-collapse-icon-padding-y: map.get( $kendo-spacing, .5 ) !default;
+
 /// Background color of the splitter splitbar.
 /// @group splitter
 $kendo-splitbar-bg: get-theme-color-var( neutral-10 ) !default;
