--- a/packages/material/scss/splitter/_variables.scss
+++ b/packages/material/scss/splitter/_variables.scss
@@ -12,6 +12,8 @@ $kendo-splitter-splitbar-size: k-map-get( $kendo-spacing, 3 ) !default;
 $kendo-splitter-drag-handle-length: 20px !default;
 $kendo-splitter-drag-handle-thickness: 2px !default;
 $kendo-splitter-drag-icon-margin: 7px !default;
+$kendo-splitter-collapse-icon-padding-x: null !default;
+$kendo-splitter-collapse-icon-padding-y: k-map-get( $kendo-spacing, .5 ) !default;
 
 $kendo-splitbar-bg: k-try-shade( $kendo-splitter-bg, 1 ) !default;
 $kendo-splitbar-text: $kendo-subtle-text !default;
