chore(icons): refactor k-icon-action class

--- a/packages/default/scss/icons/_layout.scss
+++ b/packages/default/scss/icons/_layout.scss
@@ -56,7 +56,11 @@ $ki-icon-size: $kendo-icon-size;
     }
 
     .k-icon-action {
+        display: inline-flex;
         padding: $kendo-icon-padding;
+        line-height: 1;
+        align-items: center;
+        vertical-align: middle;
         cursor: pointer;
     }
 
