test(gantt, treelist): adjust expand/collapse icon target size

--- a/packages/fluent/scss/treelist/_layout.scss
+++ b/packages/fluent/scss/treelist/_layout.scss
@@ -96,4 +96,10 @@
         margin-inline: .5em;
     }
 
+    .k-treelist-toggle {
+        margin-block: calc( var( --kendo-icon-padding ) * -1 );
+        padding: var( --kendo-icon-padding, .25rem );
+        cursor: pointer;
+    }
+
 }
