--- a/packages/default/scss/treelist/_layout.scss
+++ b/packages/default/scss/treelist/_layout.scss
@@ -100,6 +100,12 @@
         margin-inline: .5em;
     }
 
+    .k-treelist-toggle {
+        margin-block: -$kendo-icon-padding;
+        padding: $kendo-icon-padding;
+        cursor: pointer;
+    }
+
 }
 
 
