--- a/packages/fluent/scss/dropdowntree/_layout.scss
+++ b/packages/fluent/scss/dropdowntree/_layout.scss
@@ -1,3 +1,4 @@
+@use "../core/" as *;
 @use "./_variables.scss" as *;
 
 @mixin kendo-dropdowntree--layout() {
@@ -9,15 +10,14 @@
     .k-popup-dropdowntree, // remove legacy class once updated in components
     .k-dropdowntree-popup,
     .k-multiselecttree-popup {
-        padding: 0;
-
-        .k-check-all {
-            padding: var( --kendo-dropdowntree-popup-padding-y, #{$kendo-dropdowntree-popup-padding-y} ) var( --kendo-dropdowntree-popup-padding-x, #{$kendo-dropdowntree-popup-padding-x} ) 0;
+        .k-treeview {
+            padding-block: calc( var( --kendo-dropdowntree-popup-padding-y, #{$kendo-dropdowntree-popup-padding-y} ) / 2 );
+            padding-inline: calc( var( --kendo-dropdowntree-popup-padding-x, #{$kendo-dropdowntree-popup-padding-x} ) / 2 );
         }
 
-        .k-treeview {
+        .k-check-all {
+            padding-block: var( --kendo-dropdowntree-popup-padding-y, #{$kendo-dropdowntree-popup-padding-y} );
             padding-inline: var( --kendo-dropdowntree-popup-padding-x, #{$kendo-dropdowntree-popup-padding-x} );
-            padding-block: var( --kendo-dropdowntree-popup-padding-y, #{$kendo-dropdowntree-popup-padding-y } );
         }
     }
 
