--- a/packages/fluent/scss/dropdowntree/_variables.scss
+++ b/packages/fluent/scss/dropdowntree/_variables.scss
@@ -1,3 +1,4 @@
+@use "sass:map";
 @use "../core/" as *;
 @use "../popup/_variables.scss" as *;
 
@@ -7,3 +8,7 @@ $kendo-dropdowntree-popup-padding-x: $kendo-popup-content-padding-x !default;
 /// The vertical padding of the DropdownTree popup
 /// @group dropdowntree
 $kendo-dropdowntree-popup-padding-y: $kendo-popup-content-padding-y !default;
+
+/// The padding of the check-all CheckBox inside the DropDownTree popup
+/// @group dropdowntree
+$kendo-dropdowntree-check-all-padding: map.get( $kendo-spacing, 1 ) !default;
