--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -1048,6 +1048,7 @@
                 position: absolute;
                 background: none;
                 cursor: row-resize;
+                z-index: 2;
             }
         }
 
