--- a/packages/fluent/scss/upload/_variables.scss
+++ b/packages/fluent/scss/upload/_variables.scss
@@ -1,100 +1,100 @@
 @use "sass:map";
 @use "../core/" as *;
 
-/// Width of the border around the upload.
+/// The width of the border around the Upload.
 /// @group upload
 $kendo-upload-border-width: 1px !default;
-/// Font family of the upload.
+/// The font family of the Upload.
 /// @group upload
 $kendo-upload-font-family: var( --kendo-font-family, inherit ) !default;
-/// Font size of the upload.
+/// The font size of the Upload.
 /// @group upload
 $kendo-upload-font-size: var( --kendo-font-size, inherit ) !default;
-/// Line height of the upload.
+/// The line height of the Upload.
 /// @group upload
 $kendo-upload-line-height: var( --kendo-line-height, normal ) !default;
-/// Maximum height of the upload.
+/// The maximum height of the list with uploaded items.
 /// @group upload
 $kendo-upload-max-height: 300px !default;
 
-/// Background color of the upload.
-/// @group upload
-$kendo-upload-bg: var( --kendo-component-bg, initial ) !default;
-/// Text color of the upload.
+/// The text color of the Upload.
 /// @group upload
 $kendo-upload-text: var( --kendo-component-text, initial ) !default;
-/// Border color of the upload.
+/// The background color of the Upload.
+/// @group upload
+$kendo-upload-bg: var( --kendo-component-bg, initial ) !default;
+/// The border color of the Upload.
 /// @group upload
 $kendo-upload-border: var( --kendo-component-border, initial ) !default;
 
-/// Horizontal padding of the upload dropzone.
+/// The horizontal padding of the Upload dropzone.
 /// @group upload
 $kendo-upload-dropzone-padding-x: map.get( $kendo-spacing, 2 ) !default;
-/// Vertical padding of the upload dropzone.
+/// The vertical padding of the Upload dropzone.
 /// @group upload
 $kendo-upload-dropzone-padding-y: map.get( $kendo-spacing, 2 ) !default;
-/// Background color of the upload dropzone.
-/// @group upload
-$kendo-upload-dropzone-bg: get-theme-color-var( neutral-10 ) !default;
-/// Text color of the upload dropzone.
+/// The text color of the Upload dropzone.
 /// @group upload
 $kendo-upload-dropzone-text: get-theme-color-var( neutral-130 ) !default;
-/// Border color of the upload dropzone.
+/// The background color of the Upload dropzone.
+/// @group upload
+$kendo-upload-dropzone-bg: get-theme-color-var( neutral-10 ) !default;
+/// The border color of the Upload dropzone.
 /// @group upload
 $kendo-upload-dropzone-border: get-theme-color-var( neutral-30 ) !default;
-/// Background color of the hovered upload dropzone.
+/// The background color of the hovered Upload dropzone.
 /// @group upload
 $kendo-upload-dropzone-hover-bg: var( --kendo-hover-bg, inherit ) !default;
 
-/// Text color of the file status message in the upload.
+/// The text color of the Upload status message.
 /// @group upload
 $kendo-upload-status-text: var( --kendo-subtle-text, inherit ) !default;
-/// Opacity of the file status message in the upload.
+/// The opacity of the Upload status message.
 /// @group upload
 $kendo-upload-status-text-opacity: null !default;
 
-/// Horizontal padding of the upload items.
+/// The horizontal padding of an uploaded item.
 /// @group upload
 $kendo-upload-item-padding-x: map.get( $kendo-spacing, 2 ) !default;
-/// Vertical padding of the upload items.
+/// The vertical padding of an uploaded item.
 /// @group upload
 $kendo-upload-item-padding-y: map.get( $kendo-spacing, 2 ) !default;
 
-/// Spacing between multiple items in the upload.
+/// The vertical spacing between uploaded batch items.
 /// @group upload
 $kendo-upload-multiple-items-spacing: map.get( $kendo-spacing, 4 ) !default;
 
-/// Font size of the upload validation message.
+/// The font size of the Upload validation message.
 /// @group upload
 $kendo-upload-validation-font-size: var( --kendo-font-size-xs, inherit ) !default;
-/// Spacing between the icon and text in the upload.
+/// The horizontal spacing of the Upload status icon.
 /// @group upload
 $kendo-upload-icon-spacing: var( --kendo-icon-spacing, .5rem ) !default;
-/// Color of the icons in the upload.
+/// The color of the uploaded items icon.
 /// @group upload
 $kendo-upload-icon-color: var( --kendo-subtle-text, inherit ) !default;
 
-/// Thickness of the upload progress bar.
+/// The thickness of the Upload progress bar.
 /// @group upload
 $kendo-upload-progress-thickness: 2px !default;
-/// Background color of the upload progress bar.
+/// The background color of the Upload progress bar.
 /// @group upload
 $kendo-upload-progress-bg: get-theme-color-var( primary-100 ) !default;
 
-/// Success background color of the upload.
-/// @group upload
-$kendo-upload-success-bg: get-theme-color-var( success-190 ) !default;
-/// Success text color of the upload.
+/// The success text color of the Upload.
 /// @group upload
 $kendo-upload-success-text: get-theme-color-var( success-190 ) !default;
-
-/// Error background color of the upload.
+/// The success background color of the Upload progress bar.
 /// @group upload
-$kendo-upload-error-bg: get-theme-color-var( error-190 ) !default;
-/// Error text color of the upload.
+$kendo-upload-success-bg: get-theme-color-var( success-190 ) !default;
+
+/// The error text color of the Upload.
 /// @group upload
 $kendo-upload-error-text: get-theme-color-var( error-190 ) !default;
+/// The error background color of the Upload progress bar.
+/// @group upload
+$kendo-upload-error-bg: get-theme-color-var( error-190 ) !default;
 
-/// Focus shadow of the upload when focused.
+/// The shadow of the focused Upload button, actions and uploaded items.
 /// @group upload
 $kendo-upload-focus-shadow: inset 0 0 0 2px rgba(0, 0, 0, .13) !default;
