--- a/packages/fluent/scss/loader/_variables.scss
+++ b/packages/fluent/scss/loader/_variables.scss
@@ -2,97 +2,142 @@
 @use "sass:math";
 @use "../core/" as *;
 
-/// Border radius of the loader segment.
+/// The border radius of the Loader segment.
 /// @group loader
 $kendo-loader-segment-border-radius: 50% !default;
 
-/// Size of the loader segment.
+/// The size of the small Loader segment.
 /// @group loader
 $kendo-loader-sm-segment-size: map.get( $kendo-spacing, 1 ) !default;
+/// The size of the medium Loader segment.
+/// @group loader
 $kendo-loader-md-segment-size: map.get( $kendo-spacing, 2 ) !default;
+/// The size of the large Loader segment.
+/// @group loader
 $kendo-loader-lg-segment-size: map.get( $kendo-spacing, 4 ) !default;
 
-/// Horizontal padding of the loader.
+/// The horizontal padding of the small Loader.
 /// @group loader
 $kendo-loader-sm-padding-x: math.div( $kendo-loader-sm-segment-size, 2 ) !default;
+/// The horizontal padding of the medium Loader.
+/// @group loader
 $kendo-loader-md-padding-x: math.div( $kendo-loader-md-segment-size, 2 ) !default;
+/// The horizontal padding of the large Loader.
+/// @group loader
 $kendo-loader-lg-padding-x: math.div( $kendo-loader-lg-segment-size, 2 ) !default;
 
-/// Vertical padding of the loader.
+/// The vertical padding of the small Loader.
 /// @group loader
 $kendo-loader-sm-padding-y: math.div( $kendo-loader-sm-segment-size, 2 ) !default;
+/// The vertical padding of the medium Loader.
+/// @group loader
 $kendo-loader-md-padding-y: math.div( $kendo-loader-md-segment-size, 2 ) !default;
+/// The vertical padding of the large Loader.
+/// @group loader
 $kendo-loader-lg-padding-y: math.div( $kendo-loader-lg-segment-size, 2 ) !default;
 
-/// Equilateral height of the loader.
+/// The equilateral height of the Loader.
 /// @group loader
 $kendo-loader-equilateral-height: .8660 !default;
 
-/// Width of the spinner-3 loader.
+/// The width of the small spinner-3 Loader.
 /// @group loader
 $kendo-loader-sm-spinner-3-width: ( $kendo-loader-sm-segment-size * 4 ) !default;
+/// The width of the medium spinner-3 Loader.
+/// @group loader
 $kendo-loader-md-spinner-3-width: ( $kendo-loader-md-segment-size * 4 ) !default;
+/// The width of the large spinner-3 Loader.
+/// @group loader
 $kendo-loader-lg-spinner-3-width: ( $kendo-loader-lg-segment-size * 4 ) !default;
 
-/// Height of the spinner-3 loader.
+/// The height of the small spinner-3 Loader.
 /// @group loader
 $kendo-loader-sm-spinner-3-height: ( $kendo-loader-sm-spinner-3-width * $kendo-loader-equilateral-height ) !default;
+/// The height of the medium spinner-3 Loader.
+/// @group loader
 $kendo-loader-md-spinner-3-height: ( $kendo-loader-md-spinner-3-width * $kendo-loader-equilateral-height ) !default;
+/// The height of the large spinner-3 Loader.
+/// @group loader
 $kendo-loader-lg-spinner-3-height: ( $kendo-loader-lg-spinner-3-width * $kendo-loader-equilateral-height ) !default;
 
-/// Width of the spinner-4 loader.
+/// The width of the small spinner-4 Loader.
 /// @group loader
 $kendo-loader-sm-spinner-4-width: ( $kendo-loader-sm-segment-size * 4 ) !default;
+/// The width of the medium spinner-4 Loader.
+/// @group loader
 $kendo-loader-md-spinner-4-width: ( $kendo-loader-md-segment-size * 4 ) !default;
+/// The width of the large spinner-4 Loader.
+/// @group loader
 $kendo-loader-lg-spinner-4-width: ( $kendo-loader-lg-segment-size * 4 ) !default;
 
-/// Height of the spinner-4 loader.
+/// The height of the small spinner-4 Loader.
 /// @group loader
 $kendo-loader-sm-spinner-4-height: $kendo-loader-sm-spinner-4-width !default;
+/// The height of the medium spinner-4 Loader.
+/// @group loader
 $kendo-loader-md-spinner-4-height: $kendo-loader-md-spinner-4-width !default;
+/// The height of the large spinner-4 Loader.
+/// @group loader
 $kendo-loader-lg-spinner-4-height: $kendo-loader-lg-spinner-4-width !default;
 
-/// Border width of the container panel.
+/// The border width of the container panel.
 /// @group loader
 $kendo-loader-container-panel-border-width: 1px !default;
-/// Border style of the container panel.
+/// The border style of the container panel.
 /// @group loader
 $kendo-loader-container-panel-border-style: solid !default;
-/// Border color of the container panel.
+/// The border color of the container panel.
 /// @group loader
 $kendo-loader-container-panel-border-color: var( --kendo-component-border, initial ) !default;
-/// Border radius of the container panel.
+/// The border radius of the container panel.
 /// @group loader
 $kendo-loader-container-panel-border-radius: var( --kendo-border-radius-md, 0 ) !default;
-/// Background color of the container panel.
+/// The background color of the container panel.
 /// @group loader
 $kendo-loader-container-panel-bg: $kendo-color-white !default;
 
-/// Horizontal padding of the loader container.
+/// The horizontal padding of the small Loader container.
 /// @group loader
 $kendo-loader-sm-container-padding-x: map.get( $kendo-spacing, 4 ) !default;
+/// The horizontal padding of the medium Loader container.
+/// @group loader
 $kendo-loader-md-container-padding-x: map.get( $kendo-spacing, 5 ) !default;
+/// The horizontal padding of the large Loader container.
+/// @group loader
 $kendo-loader-lg-container-padding-x: map.get( $kendo-spacing, 6 ) !default;
 
-/// Vertical padding of the loader container.
+/// The vertical padding of the small Loader container.
 /// @group loader
 $kendo-loader-sm-container-padding-y: map.get( $kendo-spacing, 4 ) !default;
+/// The vertical padding of the medium Loader container.
+/// @group loader
 $kendo-loader-md-container-padding-y: map.get( $kendo-spacing, 5 ) !default;
+/// The vertical padding of the large Loader container.
+/// @group loader
 $kendo-loader-lg-container-padding-y: map.get( $kendo-spacing, 6 ) !default;
 
-/// Gap of the loader container.
+/// The gap of the small Loader container.
 /// @group loader
 $kendo-loader-sm-container-gap: map.get( $kendo-spacing, 1 ) !default;
+/// The gap of the medium Loader container.
+/// @group loader
 $kendo-loader-md-container-gap: map.get( $kendo-spacing, 2 ) !default;
+/// The gap of the large Loader container.
+/// @group loader
 $kendo-loader-lg-container-gap: map.get( $kendo-spacing, 3 ) !default;
 
-/// Font size of the loader container.
+/// The font size of the small Loader container.
 /// @group loader
 $kendo-loader-sm-container-font-size: var( --kendo-font-size-sm, inherit ) !default;
+/// The font size of the medium Loader container.
+/// @group loader
 $kendo-loader-md-container-font-size: var( --kendo-font-size-md, inherit ) !default;
+/// The font size of the large Loader container.
+/// @group loader
 $kendo-loader-lg-container-font-size: var( --kendo-font-size-lg, inherit ) !default;
 
-/// Theme variations for the loader.
+/// The theme variations for the Loader.
+/// @group loader
 $kendo-loader-brand-colors: (
     primary: primary,
     secondary: neutral,
@@ -116,7 +161,8 @@ $_tc-loader-light-matrix: (
     (normal: (50, null, null)),
 ) !default;
 
-/// Theme colors map for the loader variations.
+/// The theme colors map for the Loader variations.
+/// @group loader
 $kendo-loader-theme-colors: () !default;
 
 @each $ui-states in $_tc-loader-matrix {
