--- a/packages/fluent/scss/notification/_variables.scss
+++ b/packages/fluent/scss/notification/_variables.scss
@@ -1,55 +1,56 @@
 @use "sass:map";
 @use "../core/" as *;
 
-/// Vertical padding of the notification container.
+/// The vertical padding of the Notification container.
 /// @group notification
 $kendo-notification-container-padding-y: $kendo-padding-sm-y !default;
 
-/// Horizontal padding of the notification.
+/// The horizontal padding of the Notification.
 /// @group notification
 $kendo-notification-padding-x: map.get( $kendo-spacing, 3 ) !default;
-/// Vertical padding of the notification.
+/// The vertical padding of the Notification.
 /// @group notification
 $kendo-notification-padding-y: map.get( $kendo-spacing, 2 ) !default;
-// Width of the border around the notification.
+// The width of the border around the Notification.
 /// @group notification
 $kendo-notification-border-width: 1px !default;
-/// Border radius of the notification.
+/// The border radius of the Notification.
 /// @group notification
 $kendo-notification-border-radius: map.get( $kendo-spacing, 0.5 ) !default;
-/// Font family of the notification.
+/// The font family of the Notification.
 /// @group notification
 $kendo-notification-font-family: var( --kendo-font-family, inherit ) !default;
-/// Font size of the notification.
+/// The font size of the Notification.
 /// @group notification
 $kendo-notification-font-size: var( --kendo-font-size-sm, inherit ) !default;
-/// Line height of the notification.
+/// The line height of the Notification.
 /// @group notification
 $kendo-notification-line-height: var( --kendo-line-height, normal ) !default;
-/// Background color of the notification.
+/// The background color of the Notification.
 /// @group notification
 $kendo-notification-bg: var( --kendo-component-bg, inherit ) !default;
-/// Text color of the notification.
+/// The text color of the Notification.
 /// @group notification
 $kendo-notification-text: var( --kendo-component-text, inherit ) !default;
-/// Border color of the notification.
+/// The border color of the Notification.
 /// @group notification
 $kendo-notification-border: var( --kendo-component-border, inherit ) !default;
-/// Box shadow of the notification.
+/// The box shadow of the Notification.
 /// @group notification
 $kendo-notification-box-shadow: none !default;
 
-/// Horizontal spacing of the notification icon.
+/// The horizontal spacing of the Notification icon.
 /// @group notification
 $kendo-notification-icon-spacing: map.get( $kendo-spacing, 2 ) !default;
-/// Horizontal spacing of the notification close icon.
+/// The horizontal spacing of the Notification close icon.
 /// @group notification
 $kendo-notification-close-icon-spacing: map.get( $kendo-spacing, 4 ) !default;
-/// Color of the notification icon.
+/// The color of the Notification icon.
 /// @group notification
 $kendo-notification-icon-text: var( --kendo-component-text, inherit ) !default;
 
-/// Theme variations for the notification.
+/// The theme variations for the Notification.
+/// @group notification
 $kendo-notification-brand-colors: (
     primary: primary,
     error: error,
@@ -73,7 +74,8 @@ $_tc-notification-light-matrix: (
     (normal: (50, 160, 50)),
 ) !default;
 
-/// Theme colors map for the notification variations.
+/// The theme colors map for the Notification variations.
+/// @group notification
 $kendo-notification-theme-colors: () !default;
 
 @each $ui-states in $_tc-notification-matrix {
