WIP(core): reuse core module

--- a/packages/core/scss/styles/index.import.scss
+++ b/packages/core/scss/styles/index.import.scss
@@ -2,6 +2,9 @@
 @import "./_asp-fallback.scss";
 @import "./_layout.scss";
 @import "./_normalize.scss";
+@import "./_base.scss";
+@import "./_loading.scss";
+@import "./_selection.scss";
 
 
 @mixin kendo-core--styles() {
