WIP(default): reuse core module

--- a/packages/core/scss/functions/_color-manipulation.import.scss
+++ b/packages/core/scss/functions/_color-manipulation.import.scss
@@ -22,6 +22,8 @@ $kendo-color-level-step: 8% !default;
         @return k-color-mix( $base, $color, $level );
     }
 
+    // @debug $color;
+
     @return k-color-mix( $base, $color, k-math-clamp( $level * $_color-level-step, 0%, 100% ) );
 }
 
