--- a/packages/core/scss/_variables.scss
+++ b/packages/core/scss/_variables.scss
@@ -74,3 +74,7 @@ $kendo-padding-lg-y: k-map-get($kendo-spacing, 1.5) !default;
 $equilateral-index: 1.7320508076 !default;
 $equilateral-height: 0.8660254038 !default;
 // stylelint-enable number-max-precision
+
+// Loading
+$kendo-loading-opacity: .3 !default;
+$kendo-zindex-loading: 100 !default;
