--- a/packages/material/scss/core/color-system/_color-system-material.scss
+++ b/packages/material/scss/core/color-system/_color-system-material.scss
@@ -1,3 +1,5 @@
+@import "@progress/kendo-theme-core/scss/functions/index.import.scss";
+
 /// The color white.
 /// Note: you cannot change this value.
 /// @type Color
