chore(fluent): root typography

--- a/packages/fluent/scss/all.scss
+++ b/packages/fluent/scss/all.scss
@@ -1,4 +1,5 @@
 @use "./index.scss" as kendo-theme;
 
+@include kendo-theme.kendo-core--styles--layout();
 @include kendo-theme.config();
 @include kendo-theme.styles();
