fix(scheduler): wrong border color of the dialog titlebar in the popup edit form

--- a/packages/default/scss/scheduler/_layout.scss
+++ b/packages/default/scss/scheduler/_layout.scss
@@ -22,6 +22,7 @@
         th,
         td,
         div,
+        .k-scheduler-edit-dialog,
         > * {
             border-color: inherit;
         }
