--- a/packages/fluent/scss/scheduler/_layout.scss
+++ b/packages/fluent/scss/scheduler/_layout.scss
@@ -26,6 +26,7 @@
         th,
         td,
         div,
+        .k-scheduler-edit-dialog,
         > * {
             border-color: inherit;
         }
