--- a/packages/fluent/scss/tilelayout/_variables.scss
+++ b/packages/fluent/scss/tilelayout/_variables.scss
@@ -2,22 +2,22 @@
 @use "../core/" as *;
 @use "../card/_variables.scss" as *;
 
-/// Width of the border around the tilelayout.
+/// The width of the border around the TileLayout.
 /// @group tilelayout
 $kendo-tile-layout-border-width: 0px !default;
-/// Background color of the tilelayout.
+/// The background color of the TileLayout.
 /// @group tilelayout
 $kendo-tile-layout-bg: get-theme-color-var( neutral-10 ) !default;
 
-/// Width of the border around the tilelayout hint.
+/// The width of the border around the TileLayout hint.
 /// @group tilelayout
 $kendo-tile-layout-hint-border-width: 1px !default;
-/// Color of the border around the tilelayout hint.
-/// @group tilelayout
-$kendo-tile-layout-hint-border: var( --kendo-component-border, initial ) !default;
-/// Radius of the border around the tilelayout hint.
+/// The radius of the border around the TileLayout hint.
 /// @group tilelayout
 $kendo-tile-layout-hint-border-radius: var( --kendo-border-radius-lg, initial ) !default;
-/// Background color of the tilelayout hint.
+/// The color of the border around the TileLayout hint.
+/// @group tilelayout
+$kendo-tile-layout-hint-border: var( --kendo-component-border, initial ) !default;
+/// The background color of the TileLayout hint.
 /// @group tilelayout
 $kendo-tile-layout-hint-bg: rgba(255, 255, 255, .2) !default;
