chore(fluent): fix missing core styles

--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -327,6 +327,9 @@
 
 // Output styles
 @mixin styles() {
+    // Core
+    @include kendo-core--styles();
+
     // Core css variables
     @include core-styles();
 
