--- a/packages/fluent/scss/orgchart/_variables.scss
+++ b/packages/fluent/scss/orgchart/_variables.scss
@@ -51,7 +51,7 @@ $kendo-orgchart-node-group-padding-x: $kendo-orgchart-node-group-padding-y !defa
 $kendo-orgchart-node-group-border-width: 1px !default;
 /// Border radius of the orgchart node group.
 /// @group orgchart
-$kendo-orgchart-node-group-border-radius: var( --kendo-border-radius-md, 0 ) !default;
+$kendo-orgchart-node-group-border-radius: var( --kendo-border-radius-md, #{$kendo-border-radius-md} ) !default;
 /// Background color of the orgchart node group.
 /// @group orgchart
 $kendo-orgchart-node-group-bg: k-get-theme-color-var( neutral-10 ) !default;
