--- a/packages/fluent/scss/tabstrip/_variables.scss
+++ b/packages/fluent/scss/tabstrip/_variables.scss
@@ -54,7 +54,7 @@ $kendo-tabstrip-item-padding-y: map.get( $kendo-spacing, 2 ) + map.get( $kendo-s
 $kendo-tabstrip-item-border-width: 0px !default;
 /// The border radius of the tabstrip item
 /// @group tabstrip
-$kendo-tabstrip-item-border-radius: var( --kendo-border-radius-md, 0 ) !default;
+$kendo-tabstrip-item-border-radius: var( --kendo-border-radius-md, #{$kendo-border-radius-md} ) !default;
 /// The gap between the tabstrip items
 /// @group tabstrip
 $kendo-tabstrip-item-gap: map.get( $kendo-spacing, 2 ) !default;
