--- a/packages/fluent/scss/taskboard/_variables.scss
+++ b/packages/fluent/scss/taskboard/_variables.scss
@@ -66,7 +66,7 @@ $kendo-taskboard-column-width: 320px !default;
 $kendo-taskboard-column-border-width: 1px !default;
 /// Border radius of the task board column.
 /// @group taskboard
-$kendo-taskboard-column-border-radius: var( --kendo-border-radius-md, 0 ) !default;
+$kendo-taskboard-column-border-radius: var( --kendo-border-radius-md, #{$kendo-border-radius-md} ) !default;
 /// Background color of the task board column.
 /// @group taskboard
 $kendo-taskboard-column-bg: k-get-theme-color-var( neutral-10 ) !default;
