chore: single selection module
chore(classic): correct shadow var

Revert "chore(classic): correct shadow var"

This reverts commit 19bdda07f377acd28ace30f4c05138f979db96a6.

chore(classic): correct shadow var

chore(classic): correct shadow var

--- a/packages/classic/scss/input/_variables.scss
+++ b/packages/classic/scss/input/_variables.scss
@@ -282,7 +282,7 @@ $kendo-input-separator-opacity: .5 !default;
 $kendo-input-invalid-border: $kendo-invalid-border !default;
 /// The shadow of the invalid Input components.
 /// @group input
-$kendo-input-invalid-shadow: $kendo-input-focus-shadow !default;
+$kendo-input-invalid-shadow: $kendo-invalid-shadow !default;
 
 /// The background color of the Picker components.
 /// @group picker
