chore(fluent): utils consumption in fluent

--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -338,7 +338,7 @@
 
     // Typography and utils
     @include typography-styles();
-    // @include utils-styles();
+    @include utils-styles();
 
 
     // Generic content
