--- a/packages/material/scss/action-sheet/_variables.scss
+++ b/packages/material/scss/action-sheet/_variables.scss
@@ -78,6 +78,7 @@ $kendo-actionsheet-item-disabled-opacity: .42 !default;
 
 
 // Adaptive Actionsheet
+$kendo-adaptive-actionsheet-font-size: $kendo-font-size-lg !default;
 $kendo-adaptive-actionsheet-titlebar-border-width: 1px !default;
 $kendo-adaptive-actionsheet-titlebar-padding-y: k-map-get( $kendo-spacing, 4 ) !default;
 $kendo-adaptive-actionsheet-titlebar-padding-x: $kendo-adaptive-actionsheet-titlebar-padding-y !default;
