fix(menu): update large  menu popup font-size to match design

--- a/packages/classic/scss/menu/_variables.scss
+++ b/packages/classic/scss/menu/_variables.scss
@@ -66,7 +66,7 @@ $kendo-menu-popup-border-width: $kendo-popup-border-width !default;
 $kendo-menu-popup-font-size: $kendo-font-size-md !default;
 $kendo-menu-popup-sm-font-size: $kendo-font-size-md !default;
 $kendo-menu-popup-md-font-size: $kendo-font-size-md !default;
-$kendo-menu-popup-lg-font-size: $kendo-font-size-md !default;
+$kendo-menu-popup-lg-font-size: $kendo-font-size-lg !default;
 
 /// Line heights used along with $kendo-font-size.
 /// @group menu
