--- a/packages/default/scss/menu/_variables.scss
+++ b/packages/default/scss/menu/_variables.scss
@@ -66,14 +66,14 @@ $kendo-menu-popup-border-width: $kendo-popup-border-width !default;
 $kendo-menu-popup-font-size: $kendo-font-size-md !default;
 $kendo-menu-popup-sm-font-size: $kendo-font-size-md !default;
 $kendo-menu-popup-md-font-size: $kendo-font-size-md !default;
-$kendo-menu-popup-lg-font-size: $kendo-font-size-md !default;
+$kendo-menu-popup-lg-font-size: $kendo-font-size-lg !default;
 
 /// Line heights used along with $kendo-font-size.
 /// @group menu
 $kendo-menu-popup-line-height: $kendo-line-height-md !default;
 $kendo-menu-popup-sm-line-height: $kendo-line-height-md !default;
 $kendo-menu-popup-md-line-height: $kendo-line-height-md !default;
-$kendo-menu-popup-lg-line-height: $kendo-line-height-md !default;
+$kendo-menu-popup-lg-line-height: $kendo-line-height-lg !default;
 
 /// The background of the menu popup.
 /// @group menu
