--- a/packages/fluent/scss/menu/_variables.scss
+++ b/packages/fluent/scss/menu/_variables.scss
@@ -108,7 +108,7 @@ $kendo-menu-popup-border-width: $kendo-popup-border-width !default;
 $kendo-menu-popup-font-size: var( --kendo-font-size-md, inherit ) !default;
 $kendo-menu-popup-sm-font-size: $kendo-menu-popup-font-size !default;
 $kendo-menu-popup-md-font-size: $kendo-menu-popup-font-size !default;
-$kendo-menu-popup-lg-font-size: $kendo-menu-popup-font-size !default;
+$kendo-menu-popup-lg-font-size: var( --kendo-font-size-lg, inherit ) !default;
 
 /// Line heights used along with $kendo-font-size.
 /// @group menu
